	PR c++/29408 	* parser.c (cp_parser_using_declaration): Stop parsing when 	something goes wrong with an access declaration. 	PR c++/29408 	* g++.dg/parse/dtor12.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117800 138bc75d-0d04-0410-961f-82ee72b054a4