gcc/testsuite/g++.dg/parse/dtor12.C
@@ -1,0 +1,6 @@
+// PR c++/29408
+
+template <class T> class a
+{
+  ~a<T>();
+};
